--- a/src/main/resources/windowFXMLs/MainWindow.fxml
+++ b/src/main/resources/windowFXMLs/MainWindow.fxml
@@ -4,11 +4,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" type="BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <Button fx:id="myButton" mnemonicParsing="false" text="Hello" BorderPane.alignment="CENTER" />
-   </center>
-   <bottom>
-      <Label fx:id="myLabel" text="Label" BorderPane.alignment="CENTER" />
-   </bottom>
-</fx:root>
+<fx:root fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+         prefHeight="720.0" prefWidth="1200.0" type="BorderPane" xmlns="http://javafx.com/javafx/8"
+         xmlns:fx="http://javafx.com/fxml/1"/>
