--- a/src/main/resources/cssStyles/myStyle.css
+++ b/src/main/resources/cssStyles/myStyle.css
@@ -74,7 +74,7 @@
 .listView {
     -fx-control-inner-background: #444444; /* Default background color */
     -fx-border-color: Green;
-    -fx-font-family: "System";
+    -fx-font-family: "Courier New";
     -fx-font-size: 14px;
 }
 
