--- a/src/main/resources/windowFXMLs/Manage.fxml
+++ b/src/main/resources/windowFXMLs/Manage.fxml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
-
 <?import javafx.scene.text.Font?>
-<fx:root prefHeight="720.0" prefWidth="1025.0" style="-fx-background-color: #222222;" type="AnchorPane"
-         xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <Label layoutX="456.0" layoutY="343.0" text="Manage" textFill="WHITE">
-            <font>
-                <Font name="System Bold" size="24.0"/>
-            </font>
-        </Label>
-    </children>
+
+<fx:root prefHeight="720.0" prefWidth="1025.0" style="-fx-background-color: #222222;" type="AnchorPane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ListView fx:id="empList" layoutX="327.0" layoutY="202.0" prefHeight="422.0" prefWidth="370.0" styleClass="listView" stylesheets="@../cssStyles/myStyle.css" />
+      <Button fx:id="mngSelectedBtn" layoutX="437.0" layoutY="634.0" mnemonicParsing="false" styleClass="update-button-noSize" stylesheets="@../cssStyles/myStyle.css" text="Update/Manage Selected" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="376.0" layoutY="107.0" prefHeight="78.0" prefWidth="273.0" styleClass="textfield-design" stylesheets="@../cssStyles/myStyle.css" text="Currently Tracked Airmen">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Button fx:id="importAirmen" layoutX="771.0" layoutY="202.0" mnemonicParsing="false" styleClass="update-button-noSize" stylesheets="@../cssStyles/myStyle.css" text="Import Airmen" />
+      <Label alignment="TOP_LEFT" layoutX="728.0" layoutY="247.0" prefHeight="100.0" prefWidth="179.0" styleClass="textfield-design" stylesheets="@../cssStyles/myStyle.css" text="This feature will import Airmen saved from past exercise save files. None of the other data will load and duplicates will be ignored." wrapText="true" />
+      <Button fx:id="importAirmenOld" layoutX="756.0" layoutY="435.0" mnemonicParsing="false" styleClass="update-button-noSize" stylesheets="@../cssStyles/myStyle.css" text="Import Airmen (Old)" />
+      <Label alignment="TOP_LEFT" layoutX="728.0" layoutY="480.0" prefHeight="144.0" prefWidth="179.0" styleClass="textfield-design" stylesheets="@../cssStyles/myStyle.css" text="This feature will import saved Airmen data from saves made during the October 2023 Exercise. This is only relevant for 25 FGS. Only 4 people wont transfer. Duplicates that are already loaded will be ignored. Assigned beds are not imported." wrapText="true" />
+      <Label fx:id="importAirmenLabel" alignment="CENTER" layoutX="726.0" layoutY="176.0" prefHeight="18.0" prefWidth="179.0" styleClass="filler" stylesheets="@../cssStyles/myStyle.css" text="TEST" visible="false" />
+      <Label fx:id="importAirmenLabelOld" alignment="CENTER" layoutX="726.0" layoutY="413.0" prefHeight="18.0" prefWidth="179.0" styleClass="filler" stylesheets="@../cssStyles/myStyle.css" text="TEST" visible="false" />
+   </children>
 </fx:root>
